--- a/firebaseplonedemo/static/firebaseplonedemo.css
+++ b/firebaseplonedemo/static/firebaseplonedemo.css
@@ -73,6 +73,10 @@
 }
 
 .portlet-firebaseplonedemo .chat-sendbutton {
+    -webkit-border-radius: 5px;
+    -moz-border-radius:5px;
+    border-radius: 5px;
+    padding: 0.5em;
     background-color: hsl(284, 0%, 80%) !important;
     background-repeat: repeat-x;
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#ffffff", endColorstr="#cccccc");
