--- a/firebaseplonedemo/static/poll.css
+++ b/firebaseplonedemo/static/poll.css
@@ -1,12 +1,16 @@
 
 .portlet-firebase-chat .poll-voting {
     margin: 0.5em;
-    padding: 0.5em;
+    padding: 0.3em;
     display: inline-block;
     font-size: 115%;
-    -webkit-border-radius: 5px;
-    -moz-border-radius:5px;
-    border-radius: 5px;
+    -webkit-border-radius: 10px;
+    -moz-border-radius:10px;
+    border-radius: 10px;
+    transition: all ease 0.2s;
+    -moz-transition: all ease 0.2s;
+    -webkit-transition: all ease 0.2s;
+    -o-transition: all ease 0.2s;
     /* */
     background-color: hsl(207, 77%, 12%) !important;
     background-repeat: repeat-x;
@@ -19,7 +23,12 @@
     background-image: -o-linear-gradient(top, #6eb3ec, #072036);
     background-image: linear-gradient(#6eb3ec, #072036);
     border-color: #072036 #072036 hsl(207, 77%, -2%);
-    color: #fff !important;
+    color: #d8d8d8 !important;
     text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.92);
     -webkit-font-smoothing: antialiased;
+}
+
+.portlet-firebase-chat .poll-voting:hover {
+    color: #ffffcf !important;
+    cursor: pointer;
 }
