--- a/firebaseplonedemo/static/firebaseplonedemo.css
+++ b/firebaseplonedemo/static/firebaseplonedemo.css
@@ -4,13 +4,6 @@
     overflow: auto;
 }
 
-.portlet-firebaseplonedemo .chat-nameinput {
-    width: 120px;
-}
-
-.portlet-firebaseplonedemo .chat-msginput {
-    width: 120px;
-}
 
 .portlet-firebaseplonedemo .chat-sender {
     clear: both;
@@ -73,9 +66,10 @@
 }
 
 .portlet-firebaseplonedemo .chat-sendbutton {
-    -webkit-border-radius: 5px;
-    -moz-border-radius:5px;
-    border-radius: 5px;
+    float: right;
+    line-height: 12px;
+    font-size: 12px;
+    /* */
     padding: 0.5em;
     background-color: hsl(284, 0%, 80%) !important;
     background-repeat: repeat-x;
@@ -91,4 +85,45 @@
     color: #333 !important;
     text-shadow: 0 1px 1px rgba(255, 255, 255, 0.33);
     -webkit-font-smoothing: antialiased;
+}
+
+.portlet-firebaseplonedemo .chat-msginput {
+    display: block;
+    overflow: hidden;
+    height: 32px;
+}
+
+.portlet-firebaseplonedemo .chat-msginput input {
+    width: 100%;
+    line-height: 12px;
+    font-size: 12px;
+    height: 24px;
+}
+
+.portlet-firebaseplonedemo .chat-namelabel {
+    float: left;
+    line-height: 28px;
+    margin-right: 0.5em;
+}
+
+.portlet-firebaseplonedemo .chat-nameinput {
+    display: block;
+    overflow: hidden;
+    height: 32px;
+
+}
+
+.portlet-firebaseplonedemo .chat-nameinput input {
+    width: 100%;
+    line-height: 12px;
+    font-size: 12px;
+    height: 24px;
+}
+
+.portlet-firebaseplonedemo .chat-nameinput:after {
+    content: ".";
+    display: block;
+    height: 0;
+    clear: both;
+    visibility: hidden;
 }
